# skill-optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  optimize.py  pyproject.toml
.agent/workflows/: optimize-skills.md
doc/: manual.md  plan.md
src/skill_optimizer/: __init__.py  llm_client.py  optimizer.py  rules.py  session.py  suggestions.py  verifier.py
test/: test_all.py  verify_skills.py
